# C_HW

./: CMakeLists.txt  main.c
HW_1/: hw1_1.c  hw1_2.c  hw1_3.c  hw1_4.c  hw1_5.c
HW_2/: hw2_1_1.c  hw2_1_2.c  hw2_2_1.c  hw2_2_2.c  hw2_2_3.c  hw2_2_4.c  hw2_2_5.c  hw2_2_6.c  hw2_2_7.c  hw2_2_8.c  hw2_2_9.c
HW_3/: 4_07.c  distance.c  gcd.c  minfloat.c  prime.c  recursion.c  reverse.c
HW_4/: linked_list.c
HW_5/: hw5_1.c  hw5_2.c  hw5_3.c  hw5_4.c  hw5_5.c
