cmake_minimum_required(VERSION 3.21)
project(C_HW C)

set(CMAKE_C_STANDARD 23)

add_executable(C_HW main.c HW_1/hw1_1.c HW_1/hw1_2.c HW_1/hw1_3.c HW_1/hw1_4.c HW_1/hw1_5.c HW_2/hw2_1_1.c HW_2/hw2_1_2.c HW_2/hw2_2_2.c HW_2/hw2_2_3.c HW_2/hw2_2_4.c HW_2/hw2_2_5.c HW_2/hw2_2_6.c HW_2/hw2_2_7.c HW_2/hw2_2_8.c HW_2/hw2_2_9.c HW_2/hw2_2_1.c HW_3/gcd.c HW_3/distance.c HW_3/prime.c HW_3/minfloat.c HW_3/reverse.c HW_3/recursion.c HW_3/4_07.c HW_4/linked_list.c HW_4/linked_list2.c HW_5/hw5_1.c HW_5/hw5_2.c HW_5/hw5_3.c HW_5/hw5_4.c HW_5/hw5_5.c)
